# nonebot-plugin-endfield

./: .gitignore  README.md  pyproject.toml
endfield/: __init__.py
nonebot_plugin_endfield/: __init__.py  config.py
nonebot_plugin_endfield/assets/templates/: user_note.html
nonebot_plugin_endfield/command/: __init__.py  gacha_analysis.py  get_last_announce.py  health_check.py  help.py  user_bind.py  user_card.py  user_signin.py
nonebot_plugin_endfield/lib/: api.py  render.py  utils.py
nonebot_plugin_endfield/lib/renderers/: spaceship.json  user_note.py
